--- a/src/public/css/_variables.scss
+++ b/src/public/css/_variables.scss
@@ -7,6 +7,7 @@
 }
 
 $color01: #009bdd;
+$color02: #586a72;
 
 h1,
 h2,
@@ -18,6 +19,7 @@ label,
 input,
 a {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-size: 1rem;
 }
 h3 {
   font-size: 2rem;
