--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,6 +18,7 @@
         <ul>
           <li> <a href="/">Inicio</a></li>
           <li> <a href="/realTimeProducts">Tiempo Real</a></li>
+          <li> <a href="/chat">Chat</a></li>
         </ul>
       </nav>
     </header>
